fix: make possession type more readable
