# src/main/java/com/harena/api/endpoint/rest/mapper/PossesionMapper.java
@@ -1,11 +1,11 @@
 package com.harena.api.endpoint.rest.mapper;
 
-import static com.harena.api.endpoint.rest.model.Possession.TypeEnum.*;
-import static java.util.Objects.requireNonNull;
-
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 import school.hei.patrimoine.modele.possession.*;
+
+import static com.harena.api.endpoint.rest.model.Possession.TypeEnum.*;
+import static java.util.Objects.requireNonNull;
 
 @Component
 @RequiredArgsConstructor
@@ -21,7 +21,7 @@ public class PossesionMapper
   public com.harena.api.endpoint.rest.model.Possession toRestModel(Possession objectModel) {
     var possession = new com.harena.api.endpoint.rest.model.Possession();
     if (objectModel instanceof FluxArgent fluxArgent) {
-      possession.setType(FLUXARGENT);
+      possession.setType(FLUX_ARGENT);
       var flux = fluxAgentMapper.toRestModel(fluxArgent);
       possession.setFluxArgent(flux);
       return possession;
@@ -34,11 +34,11 @@ public class PossesionMapper
       var money = argentMapper.toRestModel(argent);
       possession.setArgent(money);
     } else if (objectModel instanceof AchatMaterielAuComptant achatMaterielAuComptant) {
-      possession.setType(ACHATMATERIELAUCOMPTANT);
+      possession.setType(ACHAT_MATERIEL_AU_COMPTANT);
       var material = achatMaterielAuComptantMapper.toRestModel(achatMaterielAuComptant);
       possession.setAchatMaterielAuComptant(material);
     } else if (objectModel instanceof TransfertArgent transfertArgent) {
-      possession.setType(TRANSFERTARGENT);
+      possession.setType(TRANSFERT_ARGENT);
       var money = transfertArgentMapper.toRestModel(transfertArgent);
       possession.setTransfertArgent(money);
     }
@@ -48,11 +48,11 @@ public class PossesionMapper
   @Override
   public Possession toObjectModel(com.harena.api.endpoint.rest.model.Possession restModel) {
     return switch (requireNonNull(restModel.getType())) {
-      case FLUXARGENT -> fluxAgentMapper.toObjectModel(requireNonNull(restModel.getFluxArgent()));
+      case FLUX_ARGENT -> fluxAgentMapper.toObjectModel(requireNonNull(restModel.getFluxArgent()));
       case MATERIEL -> materielMapper.toObjectModel(requireNonNull(restModel.getMateriel()));
-      case ACHATMATERIELAUCOMPTANT -> achatMaterielAuComptantMapper.toObjectModel(
+      case ACHAT_MATERIEL_AU_COMPTANT -> achatMaterielAuComptantMapper.toObjectModel(
           requireNonNull(restModel.getAchatMaterielAuComptant()));
-      case TRANSFERTARGENT -> transfertArgentMapper.toObjectModel(
+      case TRANSFERT_ARGENT -> transfertArgentMapper.toObjectModel(
           requireNonNull(restModel.getTransfertArgent()));
       default -> argentMapper.toObjectModel(requireNonNull(restModel.getArgent()));
     };
